# kaleidoscope

./: CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
src/: main.cpp
src/kaleidoscope/: compiler.cpp  compiler.hpp  jit.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/nativeInterop/cinterop/: llvm.def
src/nativeMain/kotlin/kaleidoscope/: AST.kt  Compiler.kt  Jit.kt  Lexer.kt  Parser.kt  Token.kt  main.kt
src/nativeMain/kotlin/llvm/: llvm.kt
